# sqlrules

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  plugin.yml
.github/workflows/: ci.yml  publish-one.yml  publish-remaining.yml  release.yml
benchmarks/: __init__.py  bench_compile.py
docs/: API.md  ARCHITECTURE.md  COMPILER.md  CONSTRAINTS.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  DIALECT_SUPPORT.md  ERRORS.md  INTERNAL_API.md  IR_CONTRACT.md  MILESTONES.md  NON_GOALS.md  PERFORMANCE.md  PHILOSOPHY.md  PLUGIN_SYSTEM.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  TESTING.md  TRANSLATORS.md  TYPE_SUPPORT.md  VISION.md  conf.py  index.md  reference.md  requirements.txt
docs/_static/: custom.css
docs/guides/: design-philosophy.md  examples.md  faq.md  getting-started.md  markers.md  orm-column-map.md  start-here.md  troubleshooting.md  upgrade-0x.md
docs/internals/: index.md
docs/project/: support.md
docs/reference/: application.md  autodoc.md  glossary.md  index.md  plugin-api.md
examples/: README.md  basic_compile.py  postgresql_pattern.py  select_usage.py
scripts/: check_versions.py
src/sqlrules/: __init__.py  cache.py  columns.py  compiler.py  conformance.py  constraints.py  errors.py  inspectors.py  ir.py  markers.py  plugins.py  translators.py
tests/: assert_sql.py  conftest.py  test_contract_semantics.py  test_correctness.py  test_coverage_edges.py  test_errors.py  test_helpers.py  test_literal_enum.py  test_numeric_constraints.py  test_plugins.py  test_string_constraints.py  test_type_checks.py  test_v01_features.py  test_v02_features.py  test_v04_markers.py
