[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sqlrules"
version = "0.2.0"
description = "Compile constrained Pydantic models into SQLAlchemy WHERE-rule dictionaries."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SQLRules Contributors" }
]
keywords = [
  "pydantic",
  "sqlalchemy",
  "constraints",
  "compiler",
  "where",
  "filters",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "annotated-types>=0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/sqlrules"
Documentation = "https://github.com/eddiethedean/sqlrules#readme"
Repository = "https://github.com/eddiethedean/sqlrules"
Changelog = "https://github.com/eddiethedean/sqlrules/blob/main/CHANGELOG.md"
Issues = "https://github.com/eddiethedean/sqlrules/issues"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/benchmarks",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sqlrules"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["sqlrules"]
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q --cov=sqlrules --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["sqlrules"]

[tool.coverage.report]
show_missing = true
skip_covered = false
